<resources>
    <string name="app_name" translatable="false">MedReminder</string>
    
    <string name="filename_sample_db" translatable="false">sampleDB.json</string>

    <string name="button_new_sample_string">New sample</string>

    <string name="menu_export_menu_csv">Export in CSV</string>
    <string name="menu_export_menu_json">Export in JSON</string>
    <string name="menu_import_menu_csv">Import in CSV</string>
    <string name="menu_import_menu_json">Import in JSON</string>

    <string name="menu_export_no_activity_available">Sorry but there is not an app for this file type</string>
    <string name="export_csv_datetime_label">Datetime</string>

    <string name="sample_number_default_text">XX</string>
    <string name="sample_label_default_text">label</string>
    <string name="sample_datetime_default_text">January 01, 1990</string>
    <string name="sample_expand_content_description">More data</string>

    <string name="text_current_date_default"> January 01, 1990</string>
    <string name="text_current_time_default"> 12:00</string>
    <string name="button_save_sample_string">Save</string>

    <string name="measure_type_heart_rate">Heart rate</string>
    <string name="measure_type_blood_oxygenation">Blood oxygenation</string>
    <string name="measure_type_blood_pressure">Blood pressure</string>
    <string name="measure_type_glycemia">Glycemia</string>
    <string name="measure_type_heart_rate_measure_unit">bpm</string>
    <string name="measure_type_blood_oxygenation_measure_unit">sO2</string>
    <string name="measure_type_blood_pressure_measure_unit">mmHg</string>
    <string name="measure_type_glycemia_measure_unit">mg/dL</string>

    <string name="measure_type_chooser_content_description">Measure type chooser</string>
    <string name="measure_input_hint">Value</string>
    <string name="measure_validity_check_fail_message">Please, fill all the value fields</string>

    <string name="measure_add_type">Add a new type</string>
    <string name="measure_del_type">Delete this measure type</string>
</resources>